force-app/main/default/objects/Market_Share__c/Market_Share__c.object-meta.xml
<CustomObject>
    <label>Market Share</label>
    <nameField>
        <displayFormat>MS-{00000}</displayFormat>
        <label>Market Share</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Market Share</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>