force-app/main/default/objects/Market_Share__c/fields/Actual_Estimated_Surveillance_Fee__c.field-meta.xml
<CustomField>
    <fullName>Actual_Estimated_Surveillance_Fee__c</fullName>
    <label>Actual/Estimated Surveillance  Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>