force-app/main/default/objects/Market_Share__c/fields/BLR_Sub_Instrument_2__c.field-meta.xml
<CustomField>
    <fullName>BLR_Sub_Instrument_2__c</fullName>
    <label>BLR - Sub Instrument 2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Instrument_type_3__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>BLR_Sub_Instrument</valueSetName>
    </valueSet>
</CustomField>