force-app/main/default/objects/Market_Share__c/fields/Business_segment__c.field-meta.xml
<CustomField>
    <fullName>Business_segment__c</fullName>
    <defaultValue>(&quot;Rating&quot;)</defaultValue>
    <label>Business segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rating</fullName>
                <default>true</default>
                <label>Rating</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>