force-app/main/default/objects/Market_Share__c/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <formula>TEXT(Account__r.Classification__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BD Team Classification</label>
    <type>Text</type>
</CustomField>