force-app/main/default/objects/Market_Share__c/fields/Commercial_Head__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Head__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commercial Head</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Commercial_Head</relationshipName>
    <type>Lookup</type>
</CustomField>