force-app/main/default/objects/Market_Share__c/fields/Date_of_Release__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Release__c</fullName>
    <label>Date of Release</label>
    <type>Date</type>
</CustomField>