force-app/main/default/objects/Market_Share__c/fields/ICG_Segment__c.field-meta.xml
<CustomField>
    <fullName>ICG_Segment__c</fullName>
    <formula>IF(AND(Classification__c=&apos;ICG&apos;,Customer_Fee_Type__c=&apos;Cap&apos;), &apos;ICG CAP Client&apos;,

IF(AND(Classification__c=&apos;ICG&apos;,Customer_Fee_Type__c=&apos;Non - Cap&apos;,Government_Type__c !=&apos;&apos;), &apos;ICG PSU Client&apos;,

IF(AND(Classification__c=&apos;ICG&apos;,Customer_Fee_Type__c=&apos;Non - Cap&apos;,Government_Type__c=&apos;&apos;, ISPICKVAL(Instrument_type_1__c,&apos;Structured Finance&apos;)),&apos;ICG Structured Finance&apos;, 

IF(Classification__c=&apos;ICG&apos;,&apos;ICG-Other&apos;,&apos;&apos;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ICG Segment</label>
    <type>Text</type>
</CustomField>