force-app/main/default/objects/Market_Share__c/fields/Instrument_type_1__c.field-meta.xml
<CustomField>
    <fullName>Instrument_type_1__c</fullName>
    <label>Instrument type 1</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Business_segment__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>GP_Instrument_Type_1</valueSetName>
    </valueSet>
</CustomField>