force-app/main/default/objects/Market_Share__c/fields/Instrument_type_2__c.field-meta.xml
<CustomField>
    <fullName>Instrument_type_2__c</fullName>
    <label>Instrument type 2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Instrument_type_1__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>GP_Instrument_Type_2</valueSetName>
    </valueSet>
</CustomField>