force-app/main/default/objects/Market_Share__c/fields/Location_Head__c.field-meta.xml
<CustomField>
    <fullName>Location_Head__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location Head</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Location_Head</relationshipName>
    <type>Lookup</type>
</CustomField>