force-app/main/default/objects/Market_Share__c/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <label>Loss/Gain Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Loss_Reason</valueSetName>
    </valueSet>
</CustomField>