force-app/main/default/objects/Market_Share__c/fields/Mandate_Type__c.field-meta.xml
<CustomField>
    <fullName>Mandate_Type__c</fullName>
    <label>Mandate Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GP_Type</valueSetName>
    </valueSet>
</CustomField>