force-app/main/default/objects/Market_Share__c/fields/Mark_in_case_of_SO_CE__c.field-meta.xml
<CustomField>
    <fullName>Mark_in_case_of_SO_CE__c</fullName>
    <label>Mark in case of SO/CE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SO</fullName>
            </value>
            <value>
                <fullName>CE</fullName>
            </value>
            <value>
                <fullName>Provisional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>