force-app/main/default/objects/Market_Share__c/fields/MIS_Support__c.field-meta.xml
<CustomField>
    <fullName>MIS_Support__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MIS Support</label>
    <referenceTo>User</referenceTo>
    <relationshipName>MIS_Support_User</relationshipName>
    <type>Lookup</type>
</CustomField>