force-app/main/default/objects/Market_Share__c/fields/MT_Rating__c.field-meta.xml
<CustomField>
    <fullName>MT_Rating__c</fullName>
    <label>MT Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GP_MT_Rating</valueSetName>
    </valueSet>
</CustomField>