force-app/main/default/objects/Market_Share__c/fields/Other_Ratings__c.field-meta.xml
<CustomField>
    <fullName>Other_Ratings__c</fullName>
    <label>Other Ratings</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GP_Other_Ratings</valueSetName>
    </valueSet>
</CustomField>