force-app/main/default/objects/Market_Share__c/fields/Others_Reasons_Only_for_Fresh_Other__c.field-meta.xml
<CustomField>
    <fullName>Others_Reasons_Only_for_Fresh_Other__c</fullName>
    <label>Others Reasons (Only for Fresh - Other)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Loss_Reason__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Others_Reasons_Only_for_Fresh_Other</valueSetName>
    </valueSet>
</CustomField>