force-app/main/default/objects/Market_Share__c/fields/Outlook__c.field-meta.xml
<CustomField>
    <fullName>Outlook__c</fullName>
    <label>Outlook</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GP_Outlook</valueSetName>
    </valueSet>
</CustomField>