force-app/main/default/objects/Market_Share__c/fields/Ownership_Type__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Type__c</fullName>
    <formula>TEXT(Account__r.Ownership_Type_Picklist__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ownership Type</label>
    <type>Text</type>
</CustomField>