force-app/main/default/objects/Market_Share__c/fields/Release_Type__c.field-meta.xml
<CustomField>
    <fullName>Release_Type__c</fullName>
    <label>Release Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fresh From Fresh</fullName>
            </value>
            <value>
                <fullName>Fresh From Poaching</fullName>
            </value>
            <value>
                <fullName>Fresh From Enhancement</fullName>
                <label>Fresh from Enhancement</label>
            </value>
            <value>
                <fullName>Surveillance</fullName>
            </value>
            <value>
                <fullName>Withdrawal</fullName>
            </value>
            <value>
                <fullName>Issuer Not Cooperating</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>