force-app/main/default/objects/Market_Share__c/fields/Remarks_If_any__c.field-meta.xml
<CustomField>
    <fullName>Remarks_If_any__c</fullName>
    <label>Remarks, If any</label>
    <type>TextArea</type>
</CustomField>