force-app/main/default/objects/Market_Share__c/fields/SECG_Segment__c.field-meta.xml
<CustomField>
    <fullName>SECG_Segment__c</fullName>
    <formula>IF(AND(Classification__c=&apos;SECG&apos;,Customer_Fee_Type__c=&apos;Cap&apos;) , &apos;SECG CAP Client&apos;,
IF(AND(Classification__c=&apos;SECG&apos;,Customer_Fee_Type__c=&apos;Non - Cap&apos;,Government_Type__c	!=&apos;&apos;), &apos;SECG PSU Client&apos;,
IF(AND(Classification__c=&apos;SECG&apos;,Customer_Fee_Type__c=&apos;Non - Cap&apos;,Government_Type__c=&apos;&apos;, ISPICKVAL(Instrument_type_1__c,&apos;Structured Finance&apos;)), &apos;SECG Structured Finance&apos;, 
IF(Classification__c=&apos;SECG&apos;,&apos;SECG-Other&apos;,&apos;&apos;)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SECG Segment</label>
    <type>Text</type>
</CustomField>