force-app/main/default/objects/Market_Share__c/fields/Sector_to_be_filled_for_ICG_only__c.field-meta.xml
<CustomField>
    <fullName>Sector_to_be_filled_for_ICG_only__c</fullName>
    <formula>TEXT(Account__r.Sector__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sector</label>
    <type>Text</type>
</CustomField>