force-app/main/default/objects/Market_Share__c/fields/ST_Rating__c.field-meta.xml
<CustomField>
    <fullName>ST_Rating__c</fullName>
    <label>ST Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GP_ST_Rating</valueSetName>
    </valueSet>
</CustomField>