force-app/main/default/objects/Market_Share__c/fields/Sub_Sector__c.field-meta.xml
<CustomField>
    <fullName>Sub_Sector__c</fullName>
    <formula>TEXT(Account__r.Sub_Sector__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub Sector</label>
    <type>Text</type>
</CustomField>