force-app/main/default/objects/Market_Share__c/fields/Team_Manager__c.field-meta.xml
<CustomField>
    <fullName>Team_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Team_Manager</relationshipName>
    <type>Lookup</type>
</CustomField>