force-app/main/default/objects/Market_Share__c/fields/Volume_of_Debt_1_Amount__c.field-meta.xml
<CustomField>
    <fullName>Volume_of_Debt_1_Amount__c</fullName>
    <label>Volume of Debt 1 (Amount in Crore)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>