force-app/main/default/objects/Market_Share__c/fields/Volume_of_Debt_Category__c.field-meta.xml
<CustomField>
    <fullName>Volume_of_Debt_Category__c</fullName>
    <formula>Text(Account__r.Volume_of_Debt_Category__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Volume of Debt Category</label>
    <type>Text</type>
</CustomField>