force-app/main/default/objects/Market_Share__c/validationRules/Instrument_type_mandatory_Research.validationRule-meta.xml
<ValidationRule>
    <fullName>Instrument_type_mandatory_Research</fullName>
    <active>false</active>
    <description>If Research in type 1. then 2,3,5 is mandatory. And no values in 4</description>
    <errorConditionFormula>IF(AND(ISPICKVAL(Instrument_type_1__c, &apos;Research&apos;),
OR(ISPICKVAL(Instrument_type_2__c, &apos;&apos;),ISPICKVAL(Instrument_type_3__c, &apos;&apos;),NOT(ISPICKVAL(Instrument_type_4__c, &apos;&apos;)))
),true ,false )</errorConditionFormula>
    <errorMessage>For Instrument 1 : Research, Instrument 2,3,5 is mandatory and No values in Instrument 4</errorMessage>
</ValidationRule>