force-app/main/default/objects/Market_Share__c/validationRules/Other_Reasons_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Reasons_mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
TEXT( Loss_Reason__c) = &apos;Fresh Issuers - Other Reasons&apos;,
ISBLANK(TEXT( Others_Reasons_Only_for_Fresh_Other__c )))</errorConditionFormula>
    <errorDisplayField>Others_Reasons_Only_for_Fresh_Other__c</errorDisplayField>
    <errorMessage>Please select Others Reasons (Only for Fresh - Other)</errorMessage>
</ValidationRule>