force-app/main/default/objects/Market_Share__c/validationRules/SPLIT_VALUES_SHOULD_NOT_BE_MORETHANVODIN.validationRule-meta.xml
<ValidationRule>
    <fullName>SPLIT_VALUES_SHOULD_NOT_BE_MORETHANVODIN</fullName>
    <active>true</active>
    <description>If VOD in crore in not empty, then BLR split values 1,2,3,4,5 should not be greater than VOD in crore</description>
    <errorConditionFormula>Sum_of_Volume_of_Debt__c &gt; Volume_of_Debt_Amount__c</errorConditionFormula>
    <errorMessage>Volume of Debt should not be greater than Volume of Debt/Balance Sheet (In Crore)</errorMessage>
</ValidationRule>