force-app/main/default/objects/Market_Share__c/validationRules/Validation_for_Classification.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_for_Classification</fullName>
    <active>false</active>
    <errorConditionFormula>IF(AND(
ISPICKVAL(Classification__c, &quot;SECG&quot;),ISPICKVAL(Volume_of_Debt_Category__c,&quot;&quot;)
),true,false)</errorConditionFormula>
    <errorMessage>Please select VoD Category for SECG.</errorMessage>
</ValidationRule>