force-app/main/default/objects/Market_Share__c/validationRules/Validation_for_VOD1.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_for_VOD1</fullName>
    <active>true</active>
    <errorConditionFormula>OR(AND(
NOT(ISPICKVAL( BLR_Sub_Instrument_1__c,&quot;&quot;)),
OR(
ISBLANK(Volume_of_Debt_1_Amount__c)
)
),
AND(
NOT(ISBLANK(Volume_of_Debt_1_Amount__c)),
OR(
ISPICKVAL(BLR_Sub_Instrument_1__c,&quot;&quot;)
)
)
)</errorConditionFormula>
    <errorDisplayField>Volume_of_Debt_1_Amount__c</errorDisplayField>
    <errorMessage>If BLR Sub Instrument is selected then please specify its VoD or Vice-Versa</errorMessage>
</ValidationRule>