force-app/main/default/objects/Market_Share__c/validationRules/Validation_of_Reason_for_loss.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_of_Reason_for_loss</fullName>
    <active>false</active>
    <errorConditionFormula>IF(AND(
ISPICKVAL(Reason_for_loss__c, &quot;Fresh Issuers - Other reasons&quot;),ISPICKVAL(Others_Reasons_Details_only_for_Fresh__c,&quot;&quot;)
),true,false)</errorConditionFormula>
    <errorMessage>Please select Others Reasons Details (only for Fresh - Other)</errorMessage>
</ValidationRule>