force-app/main/default/objects/Market_Share__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Agency__c</columns>
    <columns>Classification__c</columns>
    <columns>Instrument_type_1__c</columns>
    <columns>Instrument_type_2__c</columns>
    <columns>Instrument_type_3__c</columns>
    <columns>Instrument_type_4__c</columns>
    <columns>ST_Rating__c</columns>
    <columns>MT_Rating__c</columns>
    <columns>LT_Rating__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>